Mon Jul 12 15:20:10 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/be_global.h:
        * dds/idl/be_global.cpp:

          Restored compatibility with TAO 1.5a and 1.6a after Jeff's change.

Mon Jul 12 08:44:58 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * dds/idl/be_util.cpp:
        * dds/idl/be_util.h:

          New files, containing a utility
          class with static methods.

        * dds/idl/be_global.cpp:
        * dds/idl/be_global.h:

          Moved methods not related to
          global data storage to new
          utility class.

Fri Jul  9 20:14:17 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/OwnershipManager.cpp:

          Fixed a bug that adds same writer to ownership candidate
          list multiple times when its strength is changed to be greater
          than current owner. This was observed from subscriber log in
          ownership update_strength test.

        * tests/DCPS/Ownership/Writer.cpp:

          Add one second delay before reset the writer strength to be higher,
          so the builtin topic data update arrives only after samples with
          previous strength on subscriber side. This helps simplify result
          verification on subscriber side.

Tue Jul  6 18:20:11 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/Ownership/Writer.cpp:

          Fixed crash on linux due to ACE_CString passed as string format
          logging parameter.

Tue Jul  6 14:43:41 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/FooTest3_0/FooTest3_0.mpc:

          Added an "after" for correct behavior in parallel builds.

Tue Jul  6 07:25:37 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Added a map to WriterInfo to keep track whether ownership need
          be evaluated for each instance. Previously, it used single flag
          for all instances sent by the writer. This is the bug that cause