@@ -1,3 +1,13 @@
+Mon Jul 12 16:21:33 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * java/idl2jni/codegen/be_global.h:
+        * java/idl2jni/codegen/be_global.cpp:
+        * java/idl2jni/codegen/be_util.h:
+        * java/idl2jni/codegen/be_util.cpp:
+
+          The same change is needed for idl2jni to work with the
+          latest DOC group tao_idl and remain compatible with 1.5a and 1.6a.
+
 Mon Jul 12 15:20:10 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * dds/idl/be_global.h:
